src/objects/Snapshots_of_Customer_Churn_by_Quarter__c.object
<CustomObject>
    <description>Snapshots of Customer Churn by Quarter for Customer Churn Dashboard, snapshot on a quarterly basis.</description>
    <fields>
        <fullName>Account_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Snapshots of Customer Churn by Quarter</relationshipLabel>
        <relationshipName>Snapshots_of_Customer_Churn_by_Quarter</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <label>Account Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Record_Type__c</fullName>
        <label>Account Record Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <label>Billing Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State_Province__c</fullName>
        <label>Billing State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deployment_Type__c</fullName>
        <label>Deployment Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Activity__c</fullName>
        <label>Last Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Customer_Acquisition_Date__c</fullName>
        <label>New Customer Acquisition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sub_Industry__c</fullName>
        <label>Sub-Industry</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USD_SUM_Amount__c</fullName>
        <label>USD SUM Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Snapshots of Customer Churn by Quarter</label>
    <nameField>
        <label>Snapshots of Customer Churn by Quarter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Snapshots of Customer Churn by Quarter</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>